[package]
edition = "2018"
name = "ecamo"
version = "0.1.0"
license = "MIT"

[dependencies]
actix-http = "3.0.0-beta.12"
actix-web = "4.0.0-beta.11"
base64 = "0.13"
bytes = "1.1.0"
chrono = "0.4"
constant_time_eq = "0.1"
env_logger = "0.8"
envy = "0.4"
futures-core = "0.3.18"
hyper = "0.14.15"
jsonwebtoken = "7"
listenfd = "0.3"
log = "0.4.14"
percent-encoding = "2.1.0"
pin-project = "1.0.8"
rand = "0.8.4"
regex = "1"
serde = "1"
serde_json = "1"
serde_regex = "1"
serde_with = "1"
sha2 = "0.9"
thiserror = "1"
url = "2"

[dependencies.jsonwebkey]
features = [
    "jwt-convert",
    "generate",
]
version = "0.3"

[dependencies.reqwest]
features = [
    "stream",
    "trust-dns",
    "socks",
]
version = "0.11"

[dependencies.tokio]
features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
    "macros",
    "sync",
]
version = "1"

[dev-dependencies]
actix-rt = "2.4.0"
actix-test = "0.1.0-beta.6"
bstr = "0.2.17"
httptest = "0.15.4"
hyper = "0.14.15"
lazy_static = "1.4.0"
mockito = "0.30.0"
