[package]
edition = "2021"
license = "MIT"
name = "ecamo"
version = "0.1.0"

[dependencies]
actix-http = "3.0.0-beta.12"
actix-web = "4.0.0-beta.11"
base64 = "0.13"
bytes = "1.1.0"
chrono = "0.4"
constant_time_eq = "0.1"
env_logger = "0.8"
envy = "0.4"
futures = "0.3.18"
hyper = "0.14.15"
jwt-simple = "0.10.7"
listenfd = "0.3"
log = "0.4.14"
rand = "0.8.4"
regex = "1"
serde = "1"
serde_json = "1"
serde_regex = "1"
serde_with = "1"
sha2 = "0.9"
thiserror = "1"

[dependencies.ecdsa]
features = [
    "sign",
    "verify",
]
version = "0.12.0"

[dependencies.elliptic-curve]
features = [
    "jwk",
    "serde",
]
version = "0.10.6"

[dependencies.p256]
features = [
    "arithmetic",
    "jwk",
]
version = "0.9.0"

[dependencies.reqwest]
features = [
    "stream",
    "trust-dns",
    "socks",
]
version = "0.11"

[dependencies.tokio]
features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
    "macros",
    "sync",
]
version = "1"

[dependencies.url]
features = ["serde"]
version = "2.2.2"

[dev-dependencies]
actix-rt = "2.4.0"
actix-test = "0.1.0-beta.6"
bstr = "0.2.17"
httptest = "0.15.4"
hyper = "0.14.15"
lazy_static = "1.4.0"
mockito = "0.30.0"
