[package]
edition = "2021"
license = "MIT"
name = "ecamo"
version = "0.1.0"

[features]
default = ["webapp"]
webapp = [
  "actix-http",
  "actix-web",
  "env_logger",
  "envy",
  "futures",
  "hyper",
  "listenfd",
  "reqwest",
  "tokio",
]

[dependencies]
actix-http = { version = "3.0.0-beta.16", optional = true }
actix-web = { version = "4.0.0-beta.15", optional = true }
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
constant_time_eq = "0.1.5"
env_logger = { version = "0.9.0", optional = true }
envy = { version = "0.4.2", optional = true }
futures = { version = "0.3.19", optional = true }
hyper = { version = "0.14.16", optional = true }
jwt-simple = "0.10.8"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.132"
serde_json = "1.0.73"
serde_regex = "1.1.0"
sha2 = "0.10.0"
thiserror = "1.0.30"

[dependencies.ecdsa]
features = [
    "sign",
    "verify",
]
version = "0.12.0"

[dependencies.elliptic-curve]
features = [
    "jwk",
    "serde",
]
version = "0.10.6"

[dependencies.p256]
features = [
    "arithmetic",
    "jwk",
]
version = "0.9.0"

[dependencies.reqwest]
features = [
    "stream",
    "trust-dns",
    "socks",
]
version = "0.11.8"
optional = true

[dependencies.serde_with]
features = ["json"]
version = "1.11.0"

[dependencies.tokio]
features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
    "macros",
    "sync",
]
version = "1.15.0"
optional = true

[dependencies.url]
features = ["serde"]
version = "2.2.2"

[dev-dependencies]
actix-rt = "2.5.0"
actix-test = "0.1.0-beta.6"
bstr = "0.2.17"
httptest = "0.15.4"
hyper = "0.14.16"
lazy_static = "1.4.0"
mockito = "0.30.0"
